--- a/css/global.css
+++ b/css/global.css
@@ -1,17 +1,25 @@
+
 :root{
-    --product-blue: rgb(22, 51, 255);
-    --hover-link: rgb(22, 51, 255);
+    --product-blue: #0069ff;
+    --hover-link-blue: rgb(22, 51, 255);
+    --light-blue :rgb(0,215,210);
+    --dark-blue :rgb(3,27,78);
+    --light-grey: rgb(229,232,237);
+    --cadet-blue: #5b6987;
     --off-black: #0c182f;
     --black: #000000;
     --white: #FFFFFF;
     --box-shadow: rgb(3 27 78 / 10%) 0px 2px 4px;
 }
 
-p {
-  font-family: WorkSans-Regular,"system-ui",-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
+p, a {
+  font-family: Work Sans,"system-ui",-apple-system, BlinkMacSystemFont, Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
   line-height: 160%;
   font-weight: 400;
   font-style: normal;
+  margin: 0;
+  line-height: 1em;
+  font-size: 12px;
 }
 
 h1 {
@@ -19,7 +27,8 @@ h1 {
     text-align: left;
     display: inline-block;
     margin-bottom: 0;
-    font-family: 'WorkSans-Bold', 'Helvetica', 'sans-serif';
+    font-weight: 700;
+    font-family: 'Work Sans', 'Helvetica', 'sans-serif';
 }
 
 input {
@@ -33,4 +42,8 @@ input {
     background: var(--white);
     box-shadow: 0px 8px 16px rgb(0 8 36 / 5%);
     border-radius: 8px;
+}
+
+body {
+    margin: 0;
 }
