--- a/css/global.css
+++ b/css/global.css
@@ -2,8 +2,8 @@
 :root{
     --product-blue: #0069ff;
     --hover-link-blue: rgb(22, 51, 255);
-    --light-blue :rgb(0,215,210);
-    --dark-blue :rgb(3,27,78);
+    --light-blue:rgb(0,215,210);
+    --dark-blue:rgb(3,27,78);
     --light-grey: rgb(229,232,237);
     --cadet-blue: #5b6987;
     --off-black: #0c182f;
@@ -11,10 +11,13 @@
     --white: #FFFFFF;
     --box-shadow: rgb(3 27 78 / 10%) 0px 2px 4px;
 }
+button {
+    font-family: Work Sans,"system-ui",-apple-system, BlinkMacSystemFont, Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
+    font-weight: 700;
+}
 
 p, a {
   font-family: Work Sans,"system-ui",-apple-system, BlinkMacSystemFont, Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
-  line-height: 160%;
   font-weight: 400;
   font-style: normal;
   margin: 0;
@@ -46,4 +49,5 @@ input {
 
 body {
     margin: 0;
+    scroll-behavior: smooth;
 }
