--- a/css/global.css
+++ b/css/global.css
@@ -9,7 +9,9 @@
     --off-black: #0c182f;
     --black: #000000;
     --white: #FFFFFF;
+    --off-white:#f2f8ff;
     --box-shadow: rgb(3 27 78 / 10%) 0px 2px 4px;
+    --terms-grey: rgba(23,28,54,0.5);
 }
 button {
     font-family: Work Sans,"system-ui",-apple-system, BlinkMacSystemFont, Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
@@ -24,13 +26,16 @@ p, a {
   line-height: 1em;
   font-size: 12px;
 }
+a:visited{
+    color: inherit;
+}
 
 h1 {
     font-size: 48px;
     text-align: left;
     display: inline-block;
     margin-bottom: 0;
-    font-weight: 700;
+    font-weight: 600;
     font-family: 'Work Sans', 'Helvetica', 'sans-serif';
 }
 
@@ -42,9 +47,17 @@ input {
     margin: 8px 0;
     color: var(--off-black);
     padding-left: 24px;
+    transition: all 0.3s ease;
+    cursor: default;
     background: var(--white);
     box-shadow: 0px 8px 16px rgb(0 8 36 / 5%);
     border-radius: 8px;
+}
+input:hover{
+    box-shadow: 0px 10px 16px rgb(0 8 36 / 10%);
+}
+input:focus{
+    outline: none;
 }
 
 body {
