--- a/css/lower-navbar.css
+++ b/css/lower-navbar.css
@@ -24,7 +24,11 @@
     grid-template-columns: auto auto auto auto auto auto;
 }
 
-.action-button {
+.login-button-container{
+    white-space: nowrap; 
+}
+
+.button {
     border-radius: 100px;
     cursor: pointer;
     font-size: 14px;
@@ -36,15 +40,27 @@
     white-space: nowrap;
 }
 
-.action-button-signup {
+.button-primary{ 
     background-color: var(--hover-link-blue);
     color: #fff;
-    margin-left:18px;
+}
+.button-primary:hover{
+    border: 1px solid rgb(0, 105, 255);
+    background-color: rgb(0, 105, 255);
 }
 
-.action-button-signin {
+.button-secondary{
     background-color: var(--white);
     color: var(--product-blue);
+}
+.button-secondary:hover{
+    color: rgb(0, 105, 255);
+    border: 1px solid rgb(0, 105, 255);
+    background-color: rgb(242, 248, 255);
+}
+
+.button-signup {
+    margin-left:18px;
 }
 
 .lower-nav-link {
