--- a/css/lower-navbar.css
+++ b/css/lower-navbar.css
@@ -15,7 +15,7 @@
     align-items: center;
     grid-template-columns: auto auto;
     padding: 0px 28px 0px 30px;
-    box-shadow: var(--box-shadow);
+    box-shadow: rgb(3 27 78 / 10%) 0px 2px 4px;
 }
 .lower-nav-link-container{
     display: grid;
@@ -45,8 +45,8 @@
     color: var(--white);
 }
 .button-primary:hover{
-    border: 1px solid rgb(0, 105, 255);
-    background-color: rgb(0, 105, 255);
+    border: 1px solid var(--product-blue);
+    background-color: var(--product-blue);
 }
 
 .button-secondary{
@@ -54,9 +54,9 @@
     color: var(--product-blue);
 }
 .button-secondary:hover{
-    color: rgb(0, 105, 255);
-    border: 1px solid rgb(0, 105, 255);
-    background-color: rgb(242, 248, 255);
+    color: var(--product-blue);
+    border: 1px solid var(--product-blue);
+    background-color: var(--off-white);
 }
 
 .button-signup {
