--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
-@import './containers.css';
-@import './global.css';
-@import './navbar.css';
-@import './lower-navbar.css';
-@import './welcome-screen.css';
-@import './services.css';
+@import "./containers.css";
+@import "./global.css";
+@import "./navbar.css";
+@import "./lower-navbar.css";
+@import "./welcome-screen.css";
+@import "./services.css";
