--- a/css/lower-navbar.css
+++ b/css/lower-navbar.css
@@ -1,4 +1,4 @@
-@import './global.css';
+@import "./global.css";
 
 .company-logo-nav {
     padding: 15px 20px 15px 0px;
@@ -74,9 +74,9 @@
     color: var(--hover-link-blue);
 }
 .lower-nav-link-dropdown:after {
-    content: '';
+    content: "";
     padding: 7px;
-    background: url('../assets/arrow-down.svg') no-repeat center;
+    background: url("../assets/arrow-down.svg") no-repeat center;
     fill: var(--hover-link-blue);
 }
 
