--- a/css/global.css
+++ b/css/global.css
@@ -1,35 +1,40 @@
-
-:root{
+:root {
     --product-blue: #0069ff;
     --hover-link-blue: #1633ff;
-    --light-blue:#00d7d2;
-    --dark-blue:#031b4e;
+    --light-blue: #00d7d2;
+    --dark-blue: #031b4e;
     --light-grey: #e5e8ed;
     --cadet-blue: #5b6987;
     --off-black: #0c182f;
     --black: #000000;
     --white: #FFFFFF;
-    --off-white:#f2f8ff;
+    --off-white: #f2f8ff;
     --terms-grey: #171c3680;
 }
 
-button, p, a, h1, h2, h5 {
-    font-family: Work Sans,"system-ui",-apple-system, BlinkMacSystemFont, Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
+button,
+p,
+a,
+h1,
+h2,
+h5 {
+    font-family: Work Sans, "system-ui", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Helvetica, Arial, "sans-serif";
 }
 
 button {
     font-weight: 700;
 }
 
-p, a {
-  font-weight: 400;
-  font-style: normal;
-  margin: 0;
-  line-height: 1em;
-  font-size: 12px;
+p,
+a {
+    font-weight: 400;
+    font-style: normal;
+    margin: 0;
+    line-height: 1em;
+    font-size: 12px;
 }
 
-a:visited{
+a:visited {
     color: inherit;
 }
 
@@ -41,7 +46,7 @@ h1 {
 
 h2 {
     font-size: 36px;
-    margin-bottom: 0;
+    margin: 0;
     font-weight: 600;
 }
 
@@ -66,12 +71,15 @@ input {
     box-shadow: 0px 8px 16px rgb(0 8 36 / 5%);
     border-radius: 8px;
 }
-input:hover{
+
+input:hover {
     box-shadow: 0px 10px 16px rgb(0 8 36 / 10%);
 }
-input:focus{
+
+input:focus {
     outline: none;
 }
+
 body {
     margin: 0;
     scroll-behavior: smooth;
