--- a/css/services.css
+++ b/css/services.css
@@ -108,7 +108,7 @@
 .services-card-link>a {
     text-decoration: none;
     font-size: 17px;
-    color: #0069ff;
+    color: var(--product-blue);
     font-weight: 400;
     line-height: 18px;
 }
